Finish Debt Reports with settlement entries and payments

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -663,22 +663,29 @@ label.DebtReportEntryBean.header.degreeName = Curso
 label.DebtReportEntryBean.header.executionYear = Ano lectivo
 label.DebtReportEntryBean.header.executionSemester = Semestre
 label.DebtReportEntryBean.header.productCode = Cód. produto
+label.DebtReportEntryBean.header.productAmount = Val. produto
 label.DebtReportEntryBean.header.invoiceEntryDescription = Descrição
 label.DebtReportEntryBean.header.documentNumber = Documento
-label.DebtReportEntryBean.header.baseAmount = Montante base
+label.DebtReportEntryBean.header.documentExportationPending = Pendente de exportação
+label.DebtReportEntryBean.header.annuled = Anulado
+label.DebtReportEntryBean.header.debitEntry.identification=Ident. Dívida
 label.DebtReportEntryBean.header.creditedAmount= Montante acertado
-label.DebtReportEntryBean.header.amountToPay = Montante a pagamento
-label.DebtReportEntryBean.header.openAmountToPay = Montante por pagar
+label.DebtReportEntryBean.header.amountToPay = Montante da dívida
+label.DebtReportEntryBean.header.openAmountToPay = Montante em aberto
+label.DebtReportEntryBean.header.amountToCredit = Montante do acerto
+label.DebtReportEntryBean.header.openAmountToCredit = Montante em aberto
 label.DebtReportEntryBean.header.agreement = Acordo
 label.DebtReportEntryBean.header.ingression = Ingresso
 label.DebtReportEntryBean.header.firstTimeStudent = 1º ano 1º vez
 label.DebtReportEntryBean.header.partialRegime = Regime parcial
 label.DebtReportEntryBean.header.statutes = Estatutos
+label.DebtReportEntryBean.header.numberOfNormalEnrolments = # Insc. plano
+label.DebtReportEntryBean.header.numberOfStandaloneEnrolments= # Insc. isoladas
+label.DebtReportEntryBean.header.numberOfExtracurricularEnrolments= # Insc. extra
 label.DebtReportEntryBean.header.tuitionPaymentPlan = Plano de pagamentos
 label.DebtReportEntryBean.header.tuitionPaymentPlanConditions = Condições do plano de pagamentos
 
 # DebtReportRequest
-
 
 label.DebtReportRequest.creationDate=Data de criação
 label.DebtReportRequest.requestor=Responsável
@@ -689,9 +696,16 @@ label.DebtReportRequest.beginDate=Data de inicio
 label.DebtReportRequest.endDate=Data de fim
 label.DebtReportRequest.description=Descrição
 
+label.DebtReportRequest.debitEntriesSheetName=Dívidas
+label.DebtReportRequest.creditEntriesSheetName=Acertos
+label.DebtReportRequest.settlementEntriesSheetName=Liquidações
+label.DebtReportRequest.paymentEntriesSheetName=Pagamentos
+label.DebtReportRequest.reimbursementEntriesSheetName=Reembolsos
+
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
 error.DebtReportRequest.endDate.required = Data de fim obrigatória
 error.DebtReportRequest.type=Tipo de relatório obrigatório
+error.DebtReportEntryBean.report.generation.verify.entry=Erro. Verifique a entrada.
 
 # DebtReportRequestResultFile
 
@@ -699,6 +713,7 @@ error.DebtReportRequestResultFile.debtReportRequest.required=O pedido é obrigató
 
 label.DebtReportRequestResultFile.INVOICE_ENTRIES.filename=Relatorio_Dividas_{0}.xlsx
 label.DebtReportRequestResultFile.SETTLEMENT_ENTRIES.filename=Relatorio_Pagamentos_{0}.xlsx
+label.DebtReportRequestResultErrorsFile.filename=Erros_{0}.txt
 
 # manageDebtReportRequests
 
@@ -706,3 +721,64 @@ label.title.manageDebtReportRequests=Relatório de Dívidas e Pagamentos
 label.manageDebtReportRequests.searchDebtReportRequest=Relatório de Dívidas e Pagamentos
 label.manageDebtReportRequests.createDebtReportRequest=Criar Pedido para Relatório de Dívidas e Pagamentos
 label.manageDebtReportRequests.cancelRequest=Cancelar
+
+label.SettlementReportEntryBean.header.identification = Identificador
+label.SettlementReportEntryBean.header.creationDate = Data de criação
+label.SettlementReportEntryBean.header.responsible = Responsável
+label.SettlementReportEntryBean.header.invoiceEntryIdentification = Ident. item
+label.SettlementReportEntryBean.header.invoiceEntryType = Tipo do item
+label.SettlementReportEntryBean.header.invoiceDocumentNumber = Documento do item
+label.SettlementReportEntryBean.header.settlementNoteNumber = Documento
+label.SettlementReportEntryBean.header.settlementNoteDocumentDate = Data do documento
+label.SettlementReportEntryBean.header.paymentDate = Data de pagamento 
+label.SettlementReportEntryBean.header.settlementNoteAnnuled = Doc. anulado
+label.SettlementReportEntryBean.header.documentExportationPending = Pendente de exportação
+label.SettlementReportEntryBean.header.settlementEntryOrder = Nº linha
+label.SettlementReportEntryBean.header.amount = Montante
+label.SettlementReportEntryBean.header.productCode = Cód. produto
+label.SettlementReportEntryBean.header.settlementEntryDescription = Descrição
+label.SettlementReportEntryBean.header.name = Nome
+label.SettlementReportEntryBean.header.identificationType = Tipo doc. identificação
+label.SettlementReportEntryBean.header.identificationNumber = Doc. identificação
+label.SettlementReportEntryBean.header.vatNumber = NIF
+label.SettlementReportEntryBean.header.email = Email
+label.SettlementReportEntryBean.header.address = Morada
+label.SettlementReportEntryBean.header.studentNumber = Nº aluno
+
+# PaymentReportEntryBean
+label.PaymentReportEntryBean.header.identification = Identificador
+label.PaymentReportEntryBean.header.creationDate = Data de criação
+label.PaymentReportEntryBean.header.responsible = Responsável
+label.PaymentReportEntryBean.header.settlementNoteNumber = Documento
+label.PaymentReportEntryBean.header.settlementNoteDocumentDate = Data do documento
+label.PaymentReportEntryBean.header.paymentDate = Data de pagamento 
+label.PaymentReportEntryBean.header.settlementNoteAnnuled = Doc. anulado
+label.PaymentReportEntryBean.header.documentExportationPending = Pendente de exportação
+label.PaymentReportEntryBean.header.paymentMethod = Método de pagamento
+label.PaymentReportEntryBean.header.amount = Montante
+label.PaymentReportEntryBean.header.name = Nome
+label.PaymentReportEntryBean.header.identificationType = Tipo doc. identificação
+label.PaymentReportEntryBean.header.identificationNumber = Doc. identificação
+label.PaymentReportEntryBean.header.vatNumber = NIF
+label.PaymentReportEntryBean.header.email = Email
+label.PaymentReportEntryBean.header.address = Morada
+label.PaymentReportEntryBean.header.studentNumber = Nº aluno
+
+
+label.ReimbursementReportEntryBean.header.identification = Identificador
+label.ReimbursementReportEntryBean.header.creationDate = Data de criação
+label.ReimbursementReportEntryBean.header.responsible = Responsável
+label.ReimbursementReportEntryBean.header.settlementNoteNumber = Documento
+label.ReimbursementReportEntryBean.header.settlementNoteDocumentDate = Data do documento
+label.ReimbursementReportEntryBean.header.reimbursementDate = Data do reembolso 
+label.ReimbursementReportEntryBean.header.settlementNoteAnnuled = Doc. anulado
+label.ReimbursementReportEntryBean.header.documentExportationPending = Pendente de exportação
+label.ReimbursementReportEntryBean.header.paymentMethod = Método de pagamento
+label.ReimbursementReportEntryBean.header.amount = Montante
+label.ReimbursementReportEntryBean.header.name = Nome
+label.ReimbursementReportEntryBean.header.identificationType = Tipo doc. identificação
+label.ReimbursementReportEntryBean.header.identificationNumber = Doc. identificação
+label.ReimbursementReportEntryBean.header.vatNumber = NIF
+label.ReimbursementReportEntryBean.header.email = Email
+label.ReimbursementReportEntryBean.header.address = Morada
+label.ReimbursementReportEntryBean.header.studentNumber = Nº aluno
