Debt account reports

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -651,6 +651,8 @@ label.DebtReportEntryBean.header.versioningCreator = Responsável
 label.DebtReportEntryBean.header.creationDate = Data de criação
 label.DebtReportEntryBean.header.entryDate = Data de lançamento
 label.DebtReportEntryBean.header.dueDate = Data de vencimento
+label.DebtReportEntryBean.header.customerId = Ident. Cliente
+label.DebtReportEntryBean.header.debtAccountId = Ident. CC
 label.DebtReportEntryBean.header.name = Nome
 label.DebtReportEntryBean.header.identificationType = Tipo doc. identificação
 label.DebtReportEntryBean.header.identificationNumber = Doc. identificação
@@ -701,6 +703,7 @@ label.DebtReportRequest.creditEntriesSheetName=Acertos
 label.DebtReportRequest.settlementEntriesSheetName=Liquidações
 label.DebtReportRequest.paymentEntriesSheetName=Pagamentos
 label.DebtReportRequest.reimbursementEntriesSheetName=Reembolsos
+label.DebtReportRequest.debtAccountEntriesSheetName=Contas Corrente
 
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
 error.DebtReportRequest.endDate.required = Data de fim obrigatória
@@ -737,6 +740,8 @@ label.SettlementReportEntryBean.header.settlementEntryOrder = Nº linha
 label.SettlementReportEntryBean.header.amount = Montante
 label.SettlementReportEntryBean.header.productCode = Cód. produto
 label.SettlementReportEntryBean.header.settlementEntryDescription = Descrição
+label.SettlementReportEntryBean.header.customerId = Ident. Cliente
+label.SettlementReportEntryBean.header.debtAccountId = Ident. CC
 label.SettlementReportEntryBean.header.name = Nome
 label.SettlementReportEntryBean.header.identificationType = Tipo doc. identificação
 label.SettlementReportEntryBean.header.identificationNumber = Doc. identificação
@@ -756,6 +761,8 @@ label.PaymentReportEntryBean.header.settlementNoteAnnuled = Doc. anulado
 label.PaymentReportEntryBean.header.documentExportationPending = Pendente de exportação
 label.PaymentReportEntryBean.header.paymentMethod = Método de pagamento
 label.PaymentReportEntryBean.header.amount = Montante
+label.PaymentReportEntryBean.header.customerId = Ident. Cliente
+label.PaymentReportEntryBean.header.debtAccountId = Ident. CC
 label.PaymentReportEntryBean.header.name = Nome
 label.PaymentReportEntryBean.header.identificationType = Tipo doc. identificação
 label.PaymentReportEntryBean.header.identificationNumber = Doc. identificação
@@ -763,7 +770,6 @@ label.PaymentReportEntryBean.header.vatNumber = NIF
 label.PaymentReportEntryBean.header.email = Email
 label.PaymentReportEntryBean.header.address = Morada
 label.PaymentReportEntryBean.header.studentNumber = Nº aluno
-
 
 label.ReimbursementReportEntryBean.header.identification = Identificador
 label.ReimbursementReportEntryBean.header.creationDate = Data de criação
@@ -775,6 +781,8 @@ label.ReimbursementReportEntryBean.header.settlementNoteAnnuled = Doc. anulado
 label.ReimbursementReportEntryBean.header.documentExportationPending = Pendente de exportação
 label.ReimbursementReportEntryBean.header.paymentMethod = Método de pagamento
 label.ReimbursementReportEntryBean.header.amount = Montante
+label.ReimbursementReportEntryBean.header.customerId = Ident. Cliente
+label.ReimbursementReportEntryBean.header.debtAccountId = Ident. CC
 label.ReimbursementReportEntryBean.header.name = Nome
 label.ReimbursementReportEntryBean.header.identificationType = Tipo doc. identificação
 label.ReimbursementReportEntryBean.header.identificationNumber = Doc. identificação
@@ -782,3 +790,18 @@ label.ReimbursementReportEntryBean.header.vatNumber = NIF
 label.ReimbursementReportEntryBean.header.email = Email
 label.ReimbursementReportEntryBean.header.address = Morada
 label.ReimbursementReportEntryBean.header.studentNumber = Nº aluno
+
+label.DebtAccountReportEntryBean.header.identification = Identificador
+label.DebtAccountReportEntryBean.header.versioningCreator = Responsável
+label.DebtAccountReportEntryBean.header.creationDate = Data de criação
+label.DebtAccountReportEntryBean.header.finantialInstitutionName = Instituição Financeira
+label.DebtAccountReportEntryBean.header.customerId = Ident. Cliente
+label.DebtAccountReportEntryBean.header.name = Nome
+label.DebtAccountReportEntryBean.header.identificationType = Tipo doc. identificação
+label.DebtAccountReportEntryBean.header.identificationNumber = Doc. identificação
+label.DebtAccountReportEntryBean.header.vatNumber = NIF
+label.DebtAccountReportEntryBean.header.email = Email
+label.DebtAccountReportEntryBean.header.address = Morada
+label.DebtAccountReportEntryBean.header.studentNumber = Nº Aluno
+label.DebtAccountReportEntryBean.header.totalInDebt = Saldo
+
