Report valid fiscal codes on report

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -802,6 +802,7 @@ label.DebtAccountReportEntryBean.header.identificationNumber = Doc. identificaçã
 label.DebtAccountReportEntryBean.header.vatNumber = NIF
 label.DebtAccountReportEntryBean.header.email = Email
 label.DebtAccountReportEntryBean.header.address = Morada
+label.DebtAccountReportEntryBean.header.countryCode = Cód. País
 label.DebtAccountReportEntryBean.header.studentNumber = Nº Aluno
+label.DebtAccountReportEntryBean.header.vatNumberValid = NIF válido?
 label.DebtAccountReportEntryBean.header.totalInDebt = Saldo
-
