Add degree type to debt reports

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -660,6 +660,7 @@ label.DebtReportEntryBean.header.vatNumber = NIF
 label.DebtReportEntryBean.header.email = Email
 label.DebtReportEntryBean.header.address = Morada
 label.DebtReportEntryBean.header.studentNumber = Nº aluno
+label.DebtReportEntryBean.header.degreeType = Tipo de Curso
 label.DebtReportEntryBean.header.degreeCode = Cód. Curso
 label.DebtReportEntryBean.header.degreeName = Curso
 label.DebtReportEntryBean.header.executionYear = Ano lectivo
