--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -512,6 +512,8 @@ error.AcademicDebtGenerationRule.degreeCurricularPlan.not.active=O plano curricu
 error.AcademicDebtGenerationRule.degreeCurricularPlans.required=A regra deverá estar definida pelo menos para um plano curricular.
 label.AcademicDebtGenerationRule.delete.success=A regra foi removida com sucesso.
 
+error.AcademicDebtGenerationRuleEntry.createDebt.only.supported.for.tuition.or.academicTax=A criação de dívida só é suportada em propinas ou taxas académicas
+
 label.AcademicDebtGenerationRule.active.message=[ACTIVO]
 label.AcademicDebtGenerationRule.inactive.message=[INACTIVO]
 label.manageacademicdebtgenerationrule.inactivate=Desactivar
@@ -705,6 +707,7 @@ label.DebtReportRequest.settlementEntriesSheetName=Liquidações
 label.DebtReportRequest.paymentEntriesSheetName=Pagamentos
 label.DebtReportRequest.reimbursementEntriesSheetName=Reembolsos
 label.DebtReportRequest.debtAccountEntriesSheetName=Contas Corrente
+label.DebtReportRequest.academicActBlockingSuspensionSheetName=Suspensões de bloqueios académicos
 
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
 error.DebtReportRequest.endDate.required = Data de fim obrigatória
@@ -726,6 +729,7 @@ label.manageDebtReportRequests.searchDebtReportRequest=Relatório de Dívidas e Pa
 label.manageDebtReportRequests.createDebtReportRequest=Criar Pedido para Relatório de Dívidas e Pagamentos
 label.manageDebtReportRequests.cancelRequest=Cancelar
 
+# SettlementReportEntryBean
 label.SettlementReportEntryBean.header.identification = Identificador
 label.SettlementReportEntryBean.header.creationDate = Data de criação
 label.SettlementReportEntryBean.header.responsible = Responsável
@@ -772,6 +776,7 @@ label.PaymentReportEntryBean.header.email = Email
 label.PaymentReportEntryBean.header.address = Morada
 label.PaymentReportEntryBean.header.studentNumber = Nº aluno
 
+# ReimbursementReportEntryBean
 label.ReimbursementReportEntryBean.header.identification = Identificador
 label.ReimbursementReportEntryBean.header.creationDate = Data de criação
 label.ReimbursementReportEntryBean.header.responsible = Responsável
@@ -792,6 +797,7 @@ label.ReimbursementReportEntryBean.header.email = Email
 label.ReimbursementReportEntryBean.header.address = Morada
 label.ReimbursementReportEntryBean.header.studentNumber = Nº aluno
 
+# DebtAccountReportEntryBean
 label.DebtAccountReportEntryBean.header.identification = Identificador
 label.DebtAccountReportEntryBean.header.versioningCreator = Responsável
 label.DebtAccountReportEntryBean.header.creationDate = Data de criação
@@ -807,3 +813,21 @@ label.DebtAccountReportEntryBean.header.countryCode = Cód. País
 label.DebtAccountReportEntryBean.header.studentNumber = Nº Aluno
 label.DebtAccountReportEntryBean.header.vatNumberValid = NIF válido?
 label.DebtAccountReportEntryBean.header.totalInDebt = Saldo
+
+# AcademicActBlockingSuspensionReportEntryBean
+label.AcademicActBlockingSuspensionReportEntryBean.header.identification = Identificador
+label.AcademicActBlockingSuspensionReportEntryBean.header.versioningCreator = Responsável
+label.AcademicActBlockingSuspensionReportEntryBean.header.creationDate = Data de criação
+label.AcademicActBlockingSuspensionReportEntryBean.header.customerId = Ident. Cliente
+label.AcademicActBlockingSuspensionReportEntryBean.header.name = Nome
+label.AcademicActBlockingSuspensionReportEntryBean.header.identificationType = Tipo doc. identificação
+label.AcademicActBlockingSuspensionReportEntryBean.header.identificationNumber = Doc. identificação
+label.AcademicActBlockingSuspensionReportEntryBean.header.vatNumber = NIF
+label.AcademicActBlockingSuspensionReportEntryBean.header.email = Email
+label.AcademicActBlockingSuspensionReportEntryBean.header.address = Morada
+label.AcademicActBlockingSuspensionReportEntryBean.header.countryCode = Cód. País
+label.AcademicActBlockingSuspensionReportEntryBean.header.studentNumber = Nº Aluno
+label.AcademicActBlockingSuspensionReportEntryBean.header.beginDate = Inicio
+label.AcademicActBlockingSuspensionReportEntryBean.header.endDate = Fim
+label.AcademicActBlockingSuspensionReportEntryBean.header.reason = Motivo
+
