- Payment reference codes and sibs transaction detail reports - Fix bug on ordering tuition payment plans - Error on creation emolument for academic service service with zero as price value - On processing debts  with rules automatically print academic treasury exception message instead of full stack trace

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -708,6 +708,8 @@ label.DebtReportRequest.paymentEntriesSheetName=Pagamentos
 label.DebtReportRequest.reimbursementEntriesSheetName=Reembolsos
 label.DebtReportRequest.debtAccountEntriesSheetName=Contas Corrente
 label.DebtReportRequest.academicActBlockingSuspensionSheetName=Suspensões de bloqueios académicos
+label.DebtReportRequest.paymentReferenceCodeSheetName=Referências SIBS
+label.DebtReportRequest.sibsTransactionDetailSheetName=Transacções SIBS
 
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
 error.DebtReportRequest.endDate.required = Data de fim obrigatória
@@ -831,3 +833,39 @@ label.AcademicActBlockingSuspensionReportEntryBean.header.beginDate = Inicio
 label.AcademicActBlockingSuspensionReportEntryBean.header.endDate = Fim
 label.AcademicActBlockingSuspensionReportEntryBean.header.reason = Motivo
 
+# PaymentReferenceCodeEntryBean
+label.PaymentReferenceCodeEntryBean.header.identification=Identificador
+label.PaymentReferenceCodeEntryBean.header.versioningCreator=Responsável
+label.PaymentReferenceCodeEntryBean.header.creationDate=Data de criação
+label.PaymentReferenceCodeEntryBean.header.customerId=Ident. cliente
+label.PaymentReferenceCodeEntryBean.header.debtAccountId=Ident. conta corrente
+label.PaymentReferenceCodeEntryBean.header.name=Nome
+label.PaymentReferenceCodeEntryBean.header.identificationType=Tipo doc. identificação
+label.PaymentReferenceCodeEntryBean.header.identificationNumber=Doc. identificação
+label.PaymentReferenceCodeEntryBean.header.vatNumber=NIF
+label.PaymentReferenceCodeEntryBean.header.email=Email
+label.PaymentReferenceCodeEntryBean.header.address=Morada
+label.PaymentReferenceCodeEntryBean.header.countryCode=Cód. País
+label.PaymentReferenceCodeEntryBean.header.studentNumber=Nº aluno
+label.PaymentReferenceCodeEntryBean.header.entityCode=Entidade SIBS
+label.PaymentReferenceCodeEntryBean.header.referenceCode=Ref. SIBS
+label.PaymentReferenceCodeEntryBean.header.finantialDocumentNumber=Nº documento
+label.PaymentReferenceCodeEntryBean.header.payableAmount=Montante
+
+# SibsTransactionDetailEntryBean
+label.SibsTransactionDetailEntryBean.header.identification=Identificador
+label.SibsTransactionDetailEntryBean.header.versioningCreator=Responsável
+label.SibsTransactionDetailEntryBean.header.creationDate=Data de criação
+label.SibsTransactionDetailEntryBean.header.whenProcessed=Processado
+label.SibsTransactionDetailEntryBean.header.whenRegistered=Registado
+label.SibsTransactionDetailEntryBean.header.amountPayed=Montante
+label.SibsTransactionDetailEntryBean.header.sibsEntityReferenceCode=Entidade
+label.SibsTransactionDetailEntryBean.header.sibsPaymentReferenceCode=Referência
+label.SibsTransactionDetailEntryBean.header.sibsTransactionId=Id. Transacção
+label.SibsTransactionDetailEntryBean.header.debtAccountId=Id. conta corrente
+label.SibsTransactionDetailEntryBean.header.customerId=Id. cliente
+label.SibsTransactionDetailEntryBean.header.businessIdentification=Código
+label.SibsTransactionDetailEntryBean.header.fiscalNumber=NIF
+label.SibsTransactionDetailEntryBean.header.customerName=Nome
+label.SibsTransactionDetailEntryBean.header.settlementDocumentNumber=Nº documento
+label.SibsTransactionDetailEntryBean.header.comments=Comentários
