Add Person Customer nationality and fiscal country attributes (WIP) Copy Tuition payment plans

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -43,6 +43,7 @@ label.annul=Anular
 label.revert=Reverter
 label.annuled=Anulado
 label.confirm=Confirmar
+label.copy=Copiar
 
 error.TuitionPaymentPlanGroup.code.required= O código de Tipo de Propina é de preenchimento obrigatório
 error.TuitionPaymentPlanGroup.name.required= O nome de Tipo de Propina é de preenchimento obrigatório
@@ -232,6 +233,8 @@ label.TuitionPaymentPlan.academicalActBlockingOn=Bloqueia actos académicos
 label.TuitionPaymentPlan.standalone=Curriculares isoladas
 label.TuitionPaymentPlan.extracurricular=Extracurriculares
 
+label.TuitionPaymentPlan.copy.success=O plano de propinas foi copiado com sucesso.
+
 error.TuitionPaymentPlan.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
 error.TuitionPaymentPlan.executionYear.required=O ano lectivo é obrigatório.
 error.TuitionPaymentPlan.degreeCurricularPlan.required=O plano curricular do curso é obrigatório.
@@ -392,6 +395,9 @@ label.manageTuitionPaymentPlanGroup.createTuitionPaymentPlanGroup=Criar Tipo de 
 # UpdateScreen updateTuitionPaymentPlanGroup
 label.manageTuitionPaymentPlanGroup.updateTuitionPaymentPlanGroup=Actualizar o Tipo de Propina
 
+label.manageTuitionPaymentPlan.copyPaymentPlan=Copiar Plano de propinas
+label.manageTuitionPaymentPlan.copyPaymentPlan.chooseExecutionYear=Escolher Ano Lectivo e Planos Curriculares
+label.manageTuitionPaymentPlan.copyPaymentPlan.confirm=Confirmar cópia do plano de propinas
 
 ### TuitionPaymentPlan ###
 
@@ -869,3 +875,5 @@ label.SibsTransactionDetailEntryBean.header.fiscalNumber=NIF
 label.SibsTransactionDetailEntryBean.header.customerName=Nome
 label.SibsTransactionDetailEntryBean.header.settlementDocumentNumber=Nº documento
 label.SibsTransactionDetailEntryBean.header.comments=Comentários
+
+
