Payment reference codes for multiple debit entries Show payment reference codes to be used in treasury debt account view

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -857,6 +857,9 @@ label.PaymentReferenceCodeEntryBean.header.entityCode=Entidade SIBS
 label.PaymentReferenceCodeEntryBean.header.referenceCode=Ref. SIBS
 label.PaymentReferenceCodeEntryBean.header.finantialDocumentNumber=Nº documento
 label.PaymentReferenceCodeEntryBean.header.payableAmount=Montante
+label.PaymentReferenceCodeEntryBean.header.description=Descrição
+label.PaymentReferenceCodeEntryBean.header.target.type=Tipo
+label.PaymentReferenceCodeEntryBean.header.state=Estado
 
 # SibsTransactionDetailEntryBean
 label.SibsTransactionDetailEntryBean.header.identification=Identificador
