Edit tuition payment plan installment tariff

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -53,6 +53,7 @@ label.TuitionPaymentPlan.degreeCurricularPlanDataSource.is.empty=Não existem pla
 label.TuitionPaymentPlan.confirmDelete= Deseja remover o Plano de Propinas do Curso seleccionado?
 label.createinsertinstallments.confirmDelete=Deseja remover a prestação?
 label.TuitionPaymentPlan.details=Detalhes
+label.TuitionPaymentPlan.edit.success=A prestação de propina foi editada com sucesso.
 
 #---------------------------
 #END OF GENERIC RESOURCES
@@ -199,6 +200,7 @@ error.TuitionPaymentPlanGroup.defaultGroupForExtracurricular.required=É necessár
 
 label.TuitionPaymentPlan.paymentPlanName=Propina para {0} ({1})
 label.TuitionPaymentPlan.paymentPlanName.customized=Propina para {0} ({1}) [{2}]
+label.TuitionPaymentPlan.conditionsDescription=Descrição
 label.TuitionPaymentPlan.delete.plan=Remover
 label.TuitionPaymentPlan.executionYear=Ano Lectivo
 label.TuitionPaymentPlan.degreeType=Tipo de Curso
@@ -232,6 +234,7 @@ label.TuitionPaymentPlan.academicalActBlockingOff=Não bloqueia actos académicos
 label.TuitionPaymentPlan.academicalActBlockingOn=Bloqueia actos académicos
 label.TuitionPaymentPlan.standalone=Curriculares isoladas
 label.TuitionPaymentPlan.extracurricular=Extracurriculares
+label.TuitionPaymentPlan.degreeCurricularPlan=Plano curricular
 
 label.TuitionPaymentPlan.copy.success=O plano de propinas foi copiado com sucesso.
 
@@ -398,6 +401,7 @@ label.manageTuitionPaymentPlanGroup.updateTuitionPaymentPlanGroup=Actualizar o T
 label.manageTuitionPaymentPlan.copyPaymentPlan=Copiar Plano de propinas
 label.manageTuitionPaymentPlan.copyPaymentPlan.chooseExecutionYear=Escolher Ano Lectivo e Planos Curriculares
 label.manageTuitionPaymentPlan.copyPaymentPlan.confirm=Confirmar cópia do plano de propinas
+label.manageTuitionPaymentPlan.editTuitionInstallmentTariff=Editar prestação de propina
 
 ### TuitionPaymentPlan ###
 
