Treasury exemptions report On student debt account page show due dates of debit entries instead of

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -720,6 +720,7 @@ label.DebtReportRequest.debtAccountEntriesSheetName=Contas Corrente
 label.DebtReportRequest.academicActBlockingSuspensionSheetName=Suspensões de bloqueios académicos
 label.DebtReportRequest.paymentReferenceCodeSheetName=Referências SIBS
 label.DebtReportRequest.sibsTransactionDetailSheetName=Transacções SIBS
+label.DebtReportRequest.treasuryExemptionSheetName=Isenções
 
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
 error.DebtReportRequest.endDate.required = Data de fim obrigatória
@@ -884,3 +885,13 @@ label.SibsTransactionDetailEntryBean.header.settlementDocumentNumber=Nº document
 label.SibsTransactionDetailEntryBean.header.comments=Comentários
 
 
+label.TreasuryExemptionReportEntryBean.header.identification=Identificador Isenção
+label.TreasuryExemptionReportEntryBean.header.versioningCreator=Responsável
+label.TreasuryExemptionReportEntryBean.header.creationDate=Data de criação
+label.TreasuryExemptionReportEntryBean.header.customerId=Id. cliente
+label.TreasuryExemptionReportEntryBean.header.debtAccountId=Id. conta corrente
+label.TreasuryExemptionReportEntryBean.header.customerName=Nome
+label.TreasuryExemptionReportEntryBean.header.debitEntryId=Id. Item de Dívida
+label.TreasuryExemptionReportEntryBean.header.debitEntryDescription=Descrição Dívida
+label.TreasuryExemptionReportEntryBean.header.exemptedAmount=Montante isentado
+label.TreasuryExemptionReportEntryBean.header.reason=Motivo
