Associate a boolean (generatePaymentCode) and a payment code pool to the mapping between service request and product.

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -125,6 +125,8 @@ label.ServiceRequestMapEntry.product=Produto
 label.ServiceRequestMapEntry.serviceRequestType=Serviço Académico
 label.ServiceRequestMapEntry.serviceRequestTypeOptions=Opções
 label.ServiceRequestMapEntry.createEventOnSituation=Lançar emolumento no estado
+label.ServiceRequestMapEntry.generatePaymentCode=Gerar referência de MB?
+label.ServiceRequestMapEntry.paymentCodePool=Intervalo de Códigos de Pagamento
 label.ServiceRequestMapEntry.create.success=O mapeamento foi criado com sucesso.
 label.ServiceRequestMapEntry.delete.success=O mapeamento foi removido com sucesso.
 
@@ -377,7 +379,10 @@ label.manageServiceRequestMapEntry.searchServiceRequestMapEntry.confirmDelete=De
 
 label.manageServiceRequestMapEntry.createServiceRequestMapEntry=Criar Mapeamento de Produto para Serviço Académico
 
-
+### EmolumentServices ###
+error.EmolumentServices.academicServiceRequest.paymentCodePool.is.required=Erro ao tentar gerar um código de pagamento, falta definir o intervalo de códigos de pagamento. 
+error.EmolumentServices.academicServiceRequest.amount.equals.to.zero=Erro ao tentar criar um emolumento com uma divida igual a zero.
+error.EmolumentServices.emoluments.product.group.not.defined=As configurações da tesouraria académica não estão todas configuradas, falta configurar o grupo dos emolumentos.
 
 ### TuitionPaymentPlanGroup ###
 
