Add invoice amount to pay in settlements report to avoid lookup in debts and credits sheets

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -753,6 +753,7 @@ label.SettlementReportEntryBean.header.creationDate = Data de criação
 label.SettlementReportEntryBean.header.responsible = Responsável
 label.SettlementReportEntryBean.header.invoiceEntryIdentification = Ident. item
 label.SettlementReportEntryBean.header.invoiceEntryType = Tipo do item
+label.SettlementReportEntryBean.header.invoiceEntryAmountToPay=Montante do item
 label.SettlementReportEntryBean.header.invoiceDocumentNumber = Documento do item
 label.SettlementReportEntryBean.header.settlementNoteNumber = Documento
 label.SettlementReportEntryBean.header.settlementNoteDocumentDate = Data do documento
