Tuition debt creation for students given in spreadsheet

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -906,3 +906,44 @@ label.TreasuryExemptionReportEntryBean.header.reason=Motivo
 label.CustomerAccounting.person.with.no.customer=Não foram lançadas dívidas na sua conta corrente.
 label.CustomerAccounting.view.sibs.references.message=Para consultar as referências MB para pagamento clique no separador <strong>Referências para Pagamento</strong>.
 label.CustomerAccounting.checking.account=Conta Corrente
+
+# MassiveDebtGenerationRequestFile
+
+label.title.massivetuitiondebtcreation=Lançamento de dívidas
+
+label.MassiveDebtGenerationRequestFile.confirmdebtcreation=Confirmar lançamento de dívidas
+label.MassiveDebtGenerationRequestFile.create=Criar pedido para lançamento de dívidas
+label.MassiveDebtGenerationRequestFile.search=Pedidos para criação de dívidas
+
+label.MassiveDebtGenerationRequestFile.studentNumber=Nº aluno
+label.MassiveDebtGenerationRequestFile.studentName=Nome aluno
+label.MassiveDebtGenerationRequestFile.registrationStartDate=Data inicio da matrícula
+label.MassiveDebtGenerationRequestFile.studentCurricularPlan=Plano curricular
+label.MassiveDebtGenerationRequestFile.debtDate=Data de lançamento
+label.MassiveDebtGenerationRequestFile.tuitionPaymentPlan=Plano de propinas
+label.MassiveDebtGenerationRequestFile.executionYear=Ano Lectivo
+label.MassiveDebtGenerationRequestFile.requestFile=Ficheiro
+label.MassiveDebtGenerationRequestFile.versioningCreationDate=Data de criação
+label.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup=Dívidas
+label.MassiveDebtGenerationRequestFile.whenProcessed=Data de processamento
+label.MassiveDebtGenerationRequestFile.download=Download
+label.MassiveDebtGenerationRequestFile.degree=Curso
+label.MassiveDebtGenerationRequestFile.registration.startExecutionYear=Ano lectivo de início
+label.MassiveDebtGenerationRequestFile.success=As dívidas de propina foram lançadas com sucesso.
+
+error.MassiveDebtGenerationRequestFile.executionYear.required=O ano lectivo é obrigatório.
+error.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup.required=O tipo de propinas é obrigatório.
+error.MassiveDebtGenerationRequestFile.debtDate.required=A data de lançamento é obrigatória.
+error.MassiveDebtGenerationRequestFile.tuition.not.created=A propina não foi lançada no aluno <strong>{0} - {1}</strong> com o plano de propinas <strong>{2}</strong>.
+error.MassiveDebtGenerationRequest.student.number.invalid=Linha {0}: O nº de aluno é inválido.
+error.MassiveDebtGenerationRequest.student.name.invalid=Linha {0}: O nome do aluno é inválido.
+error.MassiveDebtGenerationRequest.dcp.code.invalid=Linha {0}: O plano curricular é inválido.
+error.MassiveDebtGenerationRequest.student.name.not.equal=Linha {0}: O nome do aluno não é igual ao nome registado no processo do aluno.
+error.MassiveDebtGenerationRequest.dcp.name.not.equal=Linha {0}: A designação do plano curricular não é igual.
+error.MassiveDebtGenerationRequest.tuition.payment.plan.not.found=Linha {0}: O plano de propinas com a designação indicada não existe.
+error.MassiveDebtGenerationRequest.invalid.sheet=O ficheiro Excel submetido não é válido. Certifique-se que o formato é XLSX.
+error.MassiveDebtGenerationRequest.found.more.than.one.registration=Linha {0}: Foi encontrado mais do que uma matrícula activa para o plano curricular indicado.
+error.MassiveDebtGenerationRequest.student.not.found=Linha {0}: O aluno não foi encontrado.
+error.MassiveDebtGenerationRequest.registration.not.found=Linha {0}: A matrícula com o plano curricular indicado não foi encontrado.
+error.MassiveDebtGenerationRequest.degree.code.invalid=Linha {0}: O código do curso é inválido.
+error.MassiveDebtGenerationRequest.degree.not.found=Linha {0}: O curso não foi encontrado.
