Academic tax debt creation for students given in spreadsheet

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -914,6 +914,7 @@ label.title.massivetuitiondebtcreation=Lançamento de dívidas
 label.MassiveDebtGenerationRequestFile.confirmdebtcreation=Confirmar lançamento de dívidas
 label.MassiveDebtGenerationRequestFile.create=Criar pedido para lançamento de dívidas
 label.MassiveDebtGenerationRequestFile.search=Pedidos para criação de dívidas
+label.MassiveDebtGenerationRequestFile.debtType=Dívida
 
 label.MassiveDebtGenerationRequestFile.studentNumber=Nº aluno
 label.MassiveDebtGenerationRequestFile.studentName=Nome aluno
@@ -931,10 +932,18 @@ label.MassiveDebtGenerationRequestFile.degree=Curso
 label.MassiveDebtGenerationRequestFile.registration.startExecutionYear=Ano lectivo de início
 label.MassiveDebtGenerationRequestFile.success=As dívidas de propina foram lançadas com sucesso.
 
+label.MassiveDebtGenerationRequestFile.forAcademicTax.false=Propina de matrícula
+label.MassiveDebtGenerationRequestFile.forAcademicTax.true=Taxa académica
+label.MassiveDebtGenerationRequestFile.forAcademicTax=Dívida Académica
+
+label.MassiveDebtGenerationRequestFile.success=As dívidas foram lançadas com sucesso.
+
 error.MassiveDebtGenerationRequestFile.executionYear.required=O ano lectivo é obrigatório.
-error.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup.required=O tipo de propinas é obrigatório.
+error.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup.or.academic.tax.required=É necessário especificar o lançamento de propina ou taxa académica.
+error.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup.and.academic.tax.specified=Foi especificado propina e taxa académica em simultâneo.
 error.MassiveDebtGenerationRequestFile.debtDate.required=A data de lançamento é obrigatória.
 error.MassiveDebtGenerationRequestFile.tuition.not.created=A propina não foi lançada no aluno <strong>{0} - {1}</strong> com o plano de propinas <strong>{2}</strong>.
+error.MassiveDebtGenerationRequestFile.academicTax.not.created=A taxa académica não foi lançada no aluno <strong>{0} - {1}</strong>.
 error.MassiveDebtGenerationRequest.student.number.invalid=Linha {0}: O nº de aluno é inválido.
 error.MassiveDebtGenerationRequest.student.name.invalid=Linha {0}: O nome do aluno é inválido.
 error.MassiveDebtGenerationRequest.dcp.code.invalid=Linha {0}: O plano curricular é inválido.
