Academic tax debt creation for students given in spreadsheet

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -928,6 +928,7 @@ label.MassiveDebtGenerationRequestFile.versioningCreationDate=Data de criação
 label.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup=Dívidas
 label.MassiveDebtGenerationRequestFile.whenProcessed=Data de processamento
 label.MassiveDebtGenerationRequestFile.download=Download
+label.MassiveDebtGenerationRequestFile.content=Folha de alunos
 label.MassiveDebtGenerationRequestFile.degree=Curso
 label.MassiveDebtGenerationRequestFile.registration.startExecutionYear=Ano lectivo de início
 label.MassiveDebtGenerationRequestFile.success=As dívidas de propina foram lançadas com sucesso.
