--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -526,6 +526,7 @@ label.AcademicDebtGenerationRule.chooseType=Escolher Tipo de Regra
 label.AcademicDebtGenerationRule.chooseExecutionYear=Escolher Ano Lectivo
 label.AcademicDebtGenerationRule.choose=Escolher
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
+label.AcademicDebtGenerationRule.numberOfDaysToDueDate=Nº dias a data de vencimento
 label.AcademicDebtGenerationRuleType.name=Tipo de Regra
 
 label.log.date=Data de Criação: 
@@ -538,6 +539,7 @@ error.AcademicDebtGenerationRule.entries.required=Adicione pelo menos um produto
 error.AcademicDebtGenerationRule.delete.impossible=Não é possível remover a regra.
 error.AcademicDebtGenerationRule.degreeCurricularPlan.not.active=O plano curricular não está activo: {0}
 error.AcademicDebtGenerationRule.degreeCurricularPlans.required=A regra deverá estar definida pelo menos para um plano curricular.
+error.AcademicDebtGenerationRule.debitEntry.with.none.or.annuled.finantial.document=Uma ou mais dívidas não tem uma nota de dívida associada.
 label.AcademicDebtGenerationRule.delete.success=A regra foi removida com sucesso.
 
 error.AcademicDebtGenerationRuleEntry.createDebt.only.supported.for.tuition.or.academicTax=A criação de dívida só é suportada em propinas ou taxas académicas
@@ -547,7 +549,6 @@ label.AcademicDebtGenerationRule.inactive.message=[INACTIVO]
 label.manageacademicdebtgenerationrule.inactivate=Desactivar
 label.manageacademicdebtgenerationrule.activate=Activar
 label.manageacademicdebtgenerationrule.process=Processar
-
 label.FinantialEntity.finantialEntity=Entidade Financeira
 
 
@@ -646,6 +647,7 @@ label.manageRegistrationProtocolPayGratuities.updateRegistrationProtocol=Actuali
 label.AcademicDebtGenerationRegistration.run.rules=Executar lançamento automático de dívidas
 label.AcademicDebtGenerationRegistration.choose.registration=Executar lançamento automático de dívidas
 label.AcademicDebtGenerationRegistration.registration=Matrícula
+label.AcademicDebtGenerationRegistration.executionYear=Ano Lectivo
 
 label.TuitionServices.removeDebitEntryForStandaloneEnrolment.reason=Remoção da inscrição
 label.TuitionServices.removeDebitEntryForExtracurricularEnrolment.reason=Remoção da inscrição
